--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,21 @@
 .App {
   text-align: center;
+  background-color: #0C374D;
+  height: 100vh;
+  color:whitesmoke;
+  overflow-x: hidden;
+  font-family: 'Montserrat';
+  font-weight: bolder;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+.card-body{
+  color: maroon;
+  font-weight: bolder;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -26,6 +37,12 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.card-img-top {
+    width: 100%;
+    height: 30vh;
+    object-fit: cover;
 }
 
 @keyframes App-logo-spin {
