--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@font-face {
+  font-family: Montserrat;
+  src: url("./Fonts/Montserrat-VariableFont_wght.ttf");
+}
+
